--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -5947,6 +5947,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3fd71e78",
+   "metadata": {},
+   "source": [
+    "## Limitations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea58970c",
+   "metadata": {},
+   "source": [
+    "Our analysis is limited to the available data, and does not cover other factors that may influence future performance. The data only goes through 2018, and new trends of interest may have developed in the past six years. Our analysis has been superficial, and further breakdown may be needed for greater accuracy. Also, we have not adapted the given financial data to present-day inflationary values, which may affect the end results of our calculations. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bd2ce89",
+   "metadata": {},
+   "source": [
+    "## Recommendations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ce66a17d-c121-4d16-8430-cb6f072a9580",
    "metadata": {},
    "source": [
@@ -6080,28 +6104,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3fd71e78",
-   "metadata": {},
-   "source": [
-    "## Limitations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ea58970c",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9bd2ce89",
-   "metadata": {},
-   "source": [
-    "## Recommendations"
-   ]
   },
   {
    "cell_type": "markdown",
