added_conclusions_limitations_nextsteps

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -5933,36 +5933,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d5f4902",
-   "metadata": {},
-   "source": [
-    "# Conclusions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8a039c80",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3fd71e78",
-   "metadata": {},
-   "source": [
-    "## Limitations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ea58970c",
-   "metadata": {},
-   "source": [
-    "Our analysis is limited to the available data, and does not cover other factors that may influence future performance. The data only goes through 2018, and new trends of interest may have developed in the past six years. Our analysis has been superficial, and further breakdown may be needed for greater accuracy. Also, we have not adapted the given financial data to present-day inflationary values, which may affect the end results of our calculations. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9bd2ce89",
    "metadata": {},
    "source": [
@@ -6090,26 +6060,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5dda20b-1d5f-4e10-b735-033203e6a58f",
+   "cell_type": "markdown",
+   "id": "0d5f4902",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c8f8a08-a6bf-415f-b122-a5d21148ef66",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Conclusions"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "5c77962c",
+   "id": "8a039c80",
    "metadata": {},
-   "source": []
+   "source": [
+    "Our analysis highlights promising trends across different budget brackets in the film industry. From genre preferences and release timings to key professionals, the data unveils actionable insights. These findings offer valuable recommendations for optimizing film production strategies tailored to three budget categories. Our stakeholders have now a starting point to make their investment and production decisions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fd71e78",
+   "metadata": {},
+   "source": [
+    "## Limitations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea58970c",
+   "metadata": {},
+   "source": [
+    "Our analysis is confined to the provided dataset and lacks consideration of additional factors that might impact future performance. Limited to data up until 2018, potential emerging trends within the past six years remain unexplored. The analysis presents a high-level overview, and a more granular breakdown may enhance accuracy. Furthermore, we haven't adjusted the financial data for present-day inflation rates, which could influence the final outcomes of our calculations."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6123,7 +6103,9 @@
    "cell_type": "markdown",
    "id": "23611ce2",
    "metadata": {},
-   "source": []
+   "source": [
+    "Future steps for this project involve in-depth exploration of the US and Foreign film markets to better understand their influence on the industry. Acquiring data from the last six years will complement our existing dataset, enabling a comprehensive analysis of recent trends. Additionally, delving deeper into the original, albeit incomplete, datasets may provide valuable insights that were lost during the merging process. These efforts aim to enhance the completeness and relevance of our research, paving the way for a more robust and insightful analysis."
+   ]
   }
  ],
  "metadata": {
