--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,6 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6dab31a3-282d-4617-81d9-4af764fdca27",
+   "metadata": {},
+   "source": [
+    "# Film Data Analysis for Microsoft\n",
+    "## Flatiron School Data Science Phase 1 Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ac77ede-8bed-4d3d-95c1-4c859ecd659e",
+   "metadata": {},
+   "source": [
+    "### Final Project Submision"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "676f827c-cbdc-4175-9aca-b4b2a4ba164f",
+   "metadata": {},
+   "source": [
+    "**Student Name**: [Rafael V Rabinovich](mailto:rafvrab@gmail.com)<br>\n",
+    "**Student Pace**: Flex pace<br>\n",
+    "**Scheduled project review date/time**: TBA<br>\n",
+    "**Instructors Name**: Morgan Jones, Mark Barbour<br>\n",
+    "**Blog URL**: https://medium.com/@rafvrab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "295ce03c",
    "metadata": {},
    "source": [
