filled_readme_file

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "6dab31a3-282d-4617-81d9-4af764fdca27",
    "metadata": {},
    "source": [
-    "# Film Data Analysis for Microsoft\n",
+    "# <b>Film Data Analysis for Microsoft</b>\n",
     "## Flatiron School Data Science Phase 1 Project"
    ]
   },
@@ -24,8 +24,7 @@
    "source": [
     "**Student Name**: [Rafael V Rabinovich](mailto:rafvrab@gmail.com)<br>\n",
     "**Student Pace**: Flex pace<br>\n",
-    "**Scheduled project review date/time**: TBA<br>\n",
-    "**Instructors Name**: Morgan Jones, Mark Barbour<br>\n",
+    "**Instructors**: Morgan Jones, Mark Barbour<br>\n",
     "**Blog URL**: https://medium.com/@rafvrab"
    ]
   },
@@ -42,9 +41,11 @@
    "id": "a515551e",
    "metadata": {},
    "source": [
-    "Microsoft is exploring entry into the movie-making industry, prompting our analysis of provided datasets to offer recommendations. Our task, commissioned by Microsoft, involves deciphering the movie industry's intricacies. Specifically, we aim to conduct data analysis to understand the factors driving successful box office performance. These insights will guide strategic decisions for Microsoft's forthcoming movie studio.<br><br>\n",
-    "The primary stakeholders are the Board of Directors at Microsoft. Our analysis will directly inform their decision-making processes, aiding in identifying lucrative film genres, potential directors, and crucial factors for maximizing movie success. <br><br>\n",
-    "This project holds significance beyond analysis, providing actionable insights that empower Microsoft to curate a portfolio of high-potential movies. "
+    "Microsoft's venture into the film-making industry has prompted a comprehensive analysis of provided datasets to deliver actionable recommendations. Commissioned by Microsoft, our task is to delve into the complexities of the movie industry. Specifically, our goal is to conduct data analysis aimed at uncovering the key factors driving successful box office performance. These insights will serve as a compass, guiding strategic decisions for Microsoft's upcoming movie studio.\n",
+    "\n",
+    "The primary stakeholders vested in this analysis are the Board of Directors at Microsoft. Our findings will play a pivotal role in shaping their decision-making processes, aiding in the identification of lucrative film genres, potential directors, and critical success factors for maximizing movie performance.\n",
+    "\n",
+    "Beyond the scope of analysis, this project holds immense significance by offering actionable insights that empower Microsoft to curate a portfolio of high-potential movies."
    ]
   },
   {
@@ -196,16 +197,6 @@
    "source": [
     "# Let's see that the data is there\n",
     "! dir Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4a60cabe-f222-4172-b9a1-d4800ffe9837",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Unzip"
    ]
   },
   {
