--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6337,6 +6337,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f34b13c9-f302-46b6-a817-c753da4757c3",
+   "metadata": {},
+   "source": [
+    "#### Overall Recommendations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c93265a0-0806-47da-aa90-9c4b74bf3be5",
+   "metadata": {},
+   "source": [
+    "Overall, the lower budget bracket (below $15 million per film) consistently yields the best ROI. Genre and staff significantly influence ROI, surpassing the impact of the release season."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0d5f4902",
    "metadata": {},
    "source": [
