fixing_and_polishing

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -14,7 +14,7 @@
    "id": "7ac77ede-8bed-4d3d-95c1-4c859ecd659e",
    "metadata": {},
    "source": [
-    "### Final Project Submision"
+    "### Final Project Submission"
    ]
   },
   {
@@ -4597,17 +4597,16 @@
    "id": "691a40ad",
    "metadata": {},
    "source": [
-    "Notebook promotes three recommendations for choosing films to produce:\n",
-    " - Uses three or more findings from data analyses to support recommendations\n",
-    " - Explains why the findings support the recommendations\n",
-    " - Explains how the recommendations would help the new movie studio succeed"
+    "Exploratory Data Analysis (EDA) unveils cinematic dynamics through ROI calculations, visualizations, and in-depth insights into production budgets, genres, and staff roles. "
    ]
   },
   {
    "cell_type": "markdown",
    "id": "d26be872",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Profit and ROI Calculations"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4630,6 +4629,14 @@
     "# Calculate Profit and ROI using correct formulas\n",
     "merged_final_df['profit'] = merged_final_df['worldwide_gross'] - merged_final_df['production_budget']\n",
     "merged_final_df['roi'] = (merged_final_df['profit'] / merged_final_df['production_budget']) * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea34126c-90e7-48cb-92bd-2f69d572d6e3",
+   "metadata": {},
+   "source": [
+    "Having calculated profit and ROI, and having that added to out merged_final_df, we proceed with some cleaning."
    ]
   },
   {
@@ -4872,7 +4879,7 @@
    "id": "e09a4359-489a-4b4c-8c12-fbf1094bbf03",
    "metadata": {},
    "source": [
-    "Let's explore our data."
+    "Let's explore our data with some visualizations."
    ]
   },
   {
